# cryptopals-py

./: .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
set1/challenge1-convert-hex-to-base64/: s1c1_test.py
set1/challenge1_convert_hex_to_base64/: s1c1.py
set1/challenge1_convert_hex_to_base64/test/: make_test_data.sh  test_s1c1.py
set1/challenge2_fixed_XOR/: s1c2.py
set1/challenge2_fixed_XOR/test/: test_s1c2.py
set1/challenge3_1_byte_XOR_cipher/: README.md  s1c3.py
set1/challenge3_1_byte_XOR_cipher/test/: test_s1c3.py
set1/challenge4_detect_1_char_XOR/: s1c4.py
set1/challenge5_repeating_XOR/: README.md  s1c5.py
set1/challenge6_break_repeating_XOR/: s1c6.py
set1/challenge7_aes_ecb/: 7.recovered.txt  s1c7.py
set1/challenge7_aes_ecb/test/: 7b.decrypted.txt  7b.txt  hello-world.enc  test_s1c7.py
set1/challenge8_detect_aes_ecb/: test_s1c8.py
set2/challenge9_pkcs7_padding/: test_s2c9.py
utils/: aes.py  utils.py
utils/test/: test_aes.py  test_detect_duplicate_blocks.py  test_pad.py  test_utils.py
