[tool.poetry]
name = "cryptopals-python"
version = "0.1.0"
description = "'Cryptopals [cryptopals.com] solutions in Python'"
authors = ["Douglas Naphas <douglasnaphas@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9.4"
parameterized = "^0.7.1"
numpy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
